# code-mode

./: .gitignore  README.md
python/: PYTHON_IMPLEMENTATION.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
python/examples/: basic_usage.py  chained_operations.py
python/src/code_mode/: __init__.py  code_mode_client.py
python/tests/: __init__.py  test_code_mode_client.py
